--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=9187f90cb0a49b7b2d16f2c11f53d770
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
- DATABASE_URL="mysql://root@127.0.0.1:3306/pi_dev"
+ DATABASE_URL="mysql://root@127.0.0.1:3306/hamza"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -37,5 +37,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
-###< symfony/mailer ###
+# Mailtrap Configuration
+
+MAILER_DSN=smtp://77355df2c98c6c:7e0c8ab91bcb7d@sandbox.smtp.mailtrap.io:2525
+
+MAILER_FROM=reclamation@yourdomain.com
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
