--- a/.env
+++ b/.env
@@ -39,9 +39,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # Mailtrap Configuration
 
-MAILER_DSN=smtp://77355df2c98c6c:7e0c8ab91bcb7d@sandbox.smtp.mailtrap.io:2525
-
+# Looking to send emails in production? Check out our Email API/SMTP product!
+# Your .env configuration
+MAILER_DSN="mailtrap+api://428339dd650187cf25b27bcf249cdb50@sandbox.api.mailtrap.io?inboxId=2848357"
 MAILER_FROM=reclamation@yourdomain.com
+
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
