--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.email_from: '%env(default:default_email_from:MAILER_FROM)%'
+    default_email_from: 'noreply@fithabit.com'
 
 services:
     # default configuration for services in *this* file
@@ -19,6 +21,12 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+
+    # Email service configuration
+    App\Service\EmailService:
+        arguments:
+            $params: '@parameter_bag'
+            $logger: '@monolog.logger.email'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
